// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostsReducer should return reducer correctly on unknown action 1`] = `
Object {
  "posts": Array [],
}
`;

exports[`PostsReducer should update reducer correctly on ADD_POST 1`] = `
Object {
  "posts": Array [
    Object {
      "id": 1,
    },
    Object {
      "id": 2,
    },
  ],
}
`;

exports[`PostsReducer should update reducer correctly on DELETE_POST 1`] = `
Object {
  "posts": Array [
    Object {
      "id": 2,
    },
  ],
}
`;
